feat: embed u-boot version in binary (#426)
Previously, bootloader version was stored separately from binary in
u-boot environment which is not really safe, because even if bootloader
itself wouldn't tamper with this setting - it is actually even
responsible for storing this information in an environment variable -
under Linux it is generally possible to delete or modify this variable.

To avoid this potential problem and another one stemming from the fact
that a bootloader can only update this separate information upon first
run, the binary got extended to bear the information.

With this approach the version of the currently programmed bootloader
version can be retrieved under Linux as soon as it is flashed.

---------

Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -1,4 +1,5 @@
 require conf/machine/include/phytec-imx8mm.inc
+require conf/machine/include/phytec-imx8mm_bootloader_embedded_version.inc
 
 # adu compatibility id
 OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "2"
