--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -1,12 +1,13 @@
 # additional kernel config
 OMNECT_KERNEL_SRC_URI:append = " \
     file://crc32c-intel_module.cfg \
-    file://disable_wlan.cfg \
+    file://bluetooth_hcibtusb.cfg \
     file://intel-lpc_ich_module.cfg \
     file://intel-mei_module.cfg \
     file://intel-vbtn_module.cfg \
     file://pc-speaker.cfg \
     file://tcg_tpm_2.0.cfg \
+    file://wifi_ath10k_pci.cfg \
 "
 # default kernel parameter
 APPEND = "console=tty0"
@@ -29,7 +30,7 @@ OMNECT_INITRAMFS_FSTYPE = "cpio.gz"
 WKS_FILE = "omnect-os.grub.wks.in"
 # no differentiation for now between release an devel images concerning rootfs
 # size
-OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '819200', '819200', d)}"
+OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '900000', '900000', d)}"
 # where to find initial grubenv
 WICVARS:append = " OMNECT_GRUBENV_FILE"
 OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
@@ -41,6 +42,7 @@ OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "0"
 MACHINE_FEATURES = " \
     3g \
     acpi \
+    bluetooth \
     efi \
     grub \
     keyboard \
@@ -54,12 +56,9 @@ MACHINE_FEATURES = " \
     x86 \
 "
 MACHINEOVERRIDES:prepend = "omnect_grub:"
-MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915"
+MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915 linux-firmware-ath10k linux-firmware-qca"
 # don't install every available firmware
 MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
-
-# has to be overwriten by injecting /etc/omnect/systemd-networkd-wait-online.env for specific configuration
-OMNECT_WAIT_ONLINE_INTERFACES_BUILD =  ""
 
 # configure hardware watchdog
 # the maximum watchdog deadline depends on the hardware capabilities
