fix(aziot-identity-precondition): fixed race against network-online target, which led to timeouts of running iotedge (cli)
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-azure-iot/azure-identityd/aziot-identityd/aziot-identityd-precondition.service
+++ b/recipes-azure-iot/azure-identityd/aziot-identityd/aziot-identityd-precondition.service
@@ -7,7 +7,7 @@ Before=aziot-identityd.service \
     aziot-certd.service \
     aziot-tpmd.service
 
-After=omnect-first-boot.service
+After=omnect-first-boot.service network-online.target
 
 ConditionPathExists=|/run/omnect-device-service/first_boot
 ConditionPathExists=|/run/omnect-device-service/omnect_validate_update
