doc: improve variable documentation in comment

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -161,6 +161,6 @@ OMNECT_DEVEL_TOOLS = "\
 
 OMNECT_DEVEL_TOOLS:append:x86-64 = "acpica dmidecode"
 
-# make target architecture for visible for later processing
+# make target architecture visible for later processing, e.g., in os-release
 # note: TARGET_ARCH must be expanded immediately to retrieve the correct value.
 OMNECT_TARGET_ARCH := "${TARGET_ARCH}"
