--- a/kas/machine/rpi/rpi.yaml
+++ b/kas/machine/rpi/rpi.yaml
@@ -6,9 +6,8 @@ header:
 repos:
   ext/meta-raspberrypi:
     url: "https://github.com/agherzan/meta-raspberrypi.git"
-    # doesnt have a scarthgap branch yet
-    branch: "master"
-    commit: "1879cb831f4ea3e532cb5ce9fa0f32be917e8fa3"
+    branch: "scarthgap"
+    commit: "1918a27419dcd5e79954c0dc0edddcde91057a7e"
     patches:
       p001:
         repo: "meta-omnect"
