--- a/kas/machine/x86_64/genericx86-64.yaml
+++ b/kas/machine/x86_64/genericx86-64.yaml
@@ -7,8 +7,8 @@ repos:
   ext/meta-yocto-bsp:
     url: "https://git.yoctoproject.org/meta-yocto"
     branch: kirkstone
-    # yocto 4.0.18
-    commit: "70d8f77cf21e92d2f610d1b73f24d3faf6d96982"
+    # yocto 4.0.19 (no tag)
+    commit: "6518f291d692997632304451695b6c194fec6fa6"
     layers:
       meta-yocto-bsp:
 
