--- a/recipes-bsp/u-boot/u-boot/omnect_env.env
+++ b/recipes-bsp/u-boot/u-boot/omnect_env.env
@@ -1,7 +1,6 @@
 #if !defined omnect_env_env
 #define omnect_env_env
 
-# distro_bootcmd from kirkstone
 boot_a_script=load ${devtype} ${devnum}:${distro_bootpart} ${scriptaddr} ${prefix}${script}; source ${scriptaddr}
 boot_prefixes=/
 boot_scripts=boot.scr
@@ -17,7 +16,7 @@ distro_bootcmd=for target in ${boot_targets}; do run bootcmd_${target}; done
 omnect_update_flow=\
 printenv; \
 env exists omnect_os_bootpart || echo "initializing omnect_os_bootpart=2" && setenv omnect_os_bootpart 2 && saveenv; \
-if test "${omnect_bootloader_updated}" == "1"; then echo "bootloader updated.";saveenv;fi; \
+if test "${omnect_bootloader_updated}" = "1"; then echo "bootloader updated.";saveenv;fi; \
 if test -n ${omnect_validate_update}; then \
             echo "Update validation failed - booting from partition ${omnect_os_bootpart}"; \
             setenv omnect_validate_update_part; \
