--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -16,15 +16,20 @@ OMNECT_KERNEL_SRC_URI = " \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
-# TODO scarthgap
-#    file://docker.cfg
-#   file://lxc.cfg
+
+OMNECT_KERNEL_FEATURES = " \
+    cfg/docker.cfg \
+    cfg/lxc.cfg \
+"
 
 # enforce identical kernel config independent of meta-virtualization
 BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
 FILESEXTRAPATHS:prepend:pn-linux-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
+KERNEL_FEATURES:append:pn-linux-imx = " ${OMNECT_KERNEL_FEATURES}"
+KERNEL_FEATURES:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_FEATURES}"
+KERNEL_FEATURES:append:pn-linux-yocto = " ${OMNECT_KERNEL_FEATURES}"
 SRC_URI:append:pn-linux-imx = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-yocto = " ${OMNECT_KERNEL_SRC_URI}"
