fix(u-boot): fixed race condition between generation of redundant-env-fragment.cfg and recipe parsing
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-bsp/u-boot/u-boot/redundant-env-fragment.cfg
+++ b/recipes-bsp/u-boot/u-boot/redundant-env-fragment.cfg
@@ -1,3 +1,4 @@
+# this is a template and gets configured by u-boot_* do_configure:prepend()
 CONFIG_ENV_SIZE=
 CONFIG_ENV_OFFSET=
 # CONFIG_ENV_IS_IN_FAT is not set
