fix: deployed image name identically to kirkstone generated one
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -89,6 +89,9 @@ env:
   # (plain) password of omnect user
   OMNECT_USER_PASSWORD: ""
 
+  # enable to set LICENSE_FLAGS_ACCEPTED via env
+  LICENSE_FLAGS_ACCEPTED:
+
 local_conf_header:
   meta-omnect_distro_omnect-os: |
     # For more options have a look into "poky/meta-poky/conf/local.conf.sample" resp.
