--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -27,7 +27,8 @@ BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
 FILESEXTRAPATHS:prepend:pn-linux-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
-KERNEL_FEATURES:append:pn-linux-imx = " ${OMNECT_KERNEL_FEATURES}"
+# TODO scarthgap:
+#KERNEL_FEATURES:append:pn-linux-imx = " ${OMNECT_KERNEL_FEATURES}"
 KERNEL_FEATURES:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_FEATURES}"
 KERNEL_FEATURES:append:pn-linux-yocto = " ${OMNECT_KERNEL_FEATURES}"
 SRC_URI:append:pn-linux-imx = " ${OMNECT_KERNEL_SRC_URI}"
