refactor: u-boot env
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -52,6 +52,7 @@ IMAGE_INSTALL:remove = "kernel"
 #     Note, machine configurations can override these values.
 OMNECT_PART_SIZE_BOOT      ??= "40960"
 OMNECT_PART_SIZE_UBOOT_ENV ??= "64"
+OMNECT_PART_REDUNDANT_UBOOT_ENV ??= "1"
 # given that each machine now defines its own value for OMNECT_PART_SIZE_ROOTFS
 # now, a fixed value for a fallback doesn't make sense anymore
 # OMNECT_PART_SIZE_ROOTFS    ??= "760832"
@@ -73,27 +74,10 @@ WICVARS:append = " OMNECT_PART_SIZE_ETC"
 WICVARS:append = " OMNECT_PART_SIZE_DATA"
 WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV1"
 WICVARS:append = " OMNECT_PART_OFFSET_UBOOT_ENV2"
+WICVARS:append = " OMNECT_PART_OFFSET_BOOT"
 
 # on x86 poky sets these as default dependencies ... we don't use them
 WKS_FILE_DEPENDS_BOOTLOADERS:remove = "syslinux systemd-boot"
-
-# location of u-boot environment areas in KiB
-#   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
-#   - It has to be aligned with the boot partition (OMNECT_PART_SIZE_BOOT) and the MBR/GPT.
-#   - Wic aborts the build, in the case the partitions cannot be located at the fixed location.
-#   - The partitions will be initialized with 0xff (--source in WKS file). In this way, u-boot is able
-#     to create the default environment during the first boot after flashing the SD-Card image.
-#   - No entries inside the partition table will be created (--no-table in WKS file).
-#   - The variable OMNECT_PART_SPARE1 is used to define a gap behind the boot partition.
-#   - The variable OMNECT_PART_SPARE2 is used to define a gap between both environment partitions.
-#     In this way, the environment partitions can be located in different erase blocks.
-OMNECT_PART_SPARE1 = "8192"
-OMNECT_PART_SPARE2 = "1984"
-OMNECT_PART_OFFSET_UBOOT_ENV1 ?= "${@int(d.getVar('OMNECT_PART_SIZE_BOOT')) + \
-                                    int(d.getVar('OMNECT_PART_SPARE1'))}"
-OMNECT_PART_OFFSET_UBOOT_ENV2 ?= "${@int(d.getVar('OMNECT_PART_OFFSET_UBOOT_ENV1')) + \
-                                    int(d.getVar('OMNECT_PART_SIZE_UBOOT_ENV')) + \
-                                    int(d.getVar('OMNECT_PART_SPARE2'))}"
 
 # limit max rootfs size
 IMAGE_ROOTFS_MAXSIZE = "${OMNECT_PART_SIZE_ROOTFS}"
