--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -32,6 +32,7 @@ WKS_FILE = "omnect-os.grub.wks.in"
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '900000', '900000', d)}"
+OMNECT_PART_OFFSET_BOOT ?= "2048"
 # where to find initial grubenv
 WICVARS:append = " OMNECT_GRUBENV_FILE"
 OMNECT_GRUBENV_FILE = "${LAYERDIR_omnect}/files/grubenv"
