--- a/dynamic-layers/raspberrypi/recipes-bsp/u-boot/u-boot/redundant-env.cfg
+++ b/dynamic-layers/raspberrypi/recipes-bsp/u-boot/u-boot/redundant-env.cfg
@@ -1,6 +1,6 @@
-CONFIG_ENV_SIZE=
-CONFIG_ENV_OFFSET=
+CONFIG_ENV_SIZE=0x10000
+CONFIG_ENV_OFFSET=0x100000
 # CONFIG_ENV_IS_IN_FAT is not set
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
-CONFIG_ENV_OFFSET_REDUND=
+CONFIG_ENV_OFFSET_REDUND=0x120000
