--- a/wic/omnect-os.grub.wks.in
+++ b/wic/omnect-os.grub.wks.in
@@ -1,4 +1,4 @@
-part --offset ${OMNECT_PART_OFFSET_BOOT} --fixed-size ${OMNECT_PART_SIZE_BOOT}K --source bootimg-efi --sourceparams="loader=grub-efi" --fstype=vfat --label boot --active
+part --offset ${OMNECT_PART_OFFSET_BOOT}K --fixed-size ${OMNECT_PART_SIZE_BOOT}K --source bootimg-efi --sourceparams="loader=grub-efi" --fstype=vfat --label boot --active
 
 include omnect-os.common.wks.inc
 
