fix(flash-mode-2/3): fix for flash-mode2/3 for devices using intel igc driver
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -3,6 +3,7 @@ OMNECT_KERNEL_SRC_URI:append = " \
     file://crc32c-intel_module.cfg \
     file://bluetooth_hcibtusb.cfg \
     file://i2c-chardev.cfg \
+    file://intel-igc.cfg \
     file://intel-lpc_ich_module.cfg \
     file://intel-mei_module.cfg \
     file://intel-vbtn_module.cfg \
