feat: removed `debuginfod` from `DISTRO_FEATURES`
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -5,7 +5,7 @@ DISTRO_VERSION = "${OE_VERSION}.${OMNECT_BUILD_NUMBER}"
 SDK_NAME_PREFIX = "${DISTRO_NAME}"
 SDK_VERSION = "${MACHINE}-${DISTRO_VERSION}"
 
-DISTRO_FEATURES = "debuginfod ipv4 ipv6 polkit seccomp zeroconf"
+DISTRO_FEATURES = "ipv4 ipv6 polkit seccomp zeroconf"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio gobject-introspection-data ldconfig"
 
 #DISTRO_FEATURES depending on MACHINE_FEATURES:
