--- a/recipes-kernel/linux/files/netfilter.cfg
+++ b/recipes-kernel/linux/files/netfilter.cfg
@@ -1,3 +1,4 @@
+CONFIG_SMP=y
 CONFIG_IP_ROUTE_CLASSID=y
 CONFIG_SYN_COOKIES=y
 CONFIG_NET_SCHED=y
@@ -203,6 +204,7 @@ CONFIG_IP_VS_MH_TAB_INDEX=12
 #
 # IPVS application helper
 #
+CONFIG_SECURITY=y
 CONFIG_IP_VS_FTP=m
 CONFIG_IP_VS_NFCT=y
 CONFIG_IP_VS_PE_SIP=m
@@ -213,7 +215,8 @@ CONFIG_NFT_REJECT_IPV4=m
 CONFIG_NFT_DUP_IPV4=m
 CONFIG_NFT_FIB_IPV4=m
 CONFIG_NF_TABLES_ARP=y
-# CONFIG_NF_TABLES_BRIDGE is not set
+CONFIG_IP_NF_MANGLE=m
+CONFIG_NF_TABLES_BRIDGE=m
 # CONFIG_NF_FLOW_TABLE_IPV4 is not set
 CONFIG_NF_DUP_IPV4=m
 CONFIG_NF_LOG_ARP=m
@@ -243,7 +246,9 @@ CONFIG_NFT_FIB_IPV6=m
 CONFIG_NF_FLOW_TABLE_IPV6=m
 CONFIG_NF_DUP_IPV6=m
 CONFIG_IP6_NF_FILTER=m
+CONFIG_IP6_NF_NAT=m
 CONFIG_IP6_NF_IPTABLES=m
+CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_MATCH_AH=m
 CONFIG_IP6_NF_MATCH_EUI64=m
 CONFIG_IP6_NF_MATCH_FRAG=m
