--- a/recipes-kernel/linux/files/netfilter.cfg
+++ b/recipes-kernel/linux/files/netfilter.cfg
@@ -1,6 +1,10 @@
+CONFIG_SMP=y
 CONFIG_IP_ROUTE_CLASSID=y
 CONFIG_SYN_COOKIES=y
+CONFIG_NET_SCHED=y
+CONFIG_BRIDGE=y
 CONFIG_BRIDGE_NETFILTER=m
+CONFIG_NETFILTER=y
 CONFIG_NETFILTER_NETLINK=m
 CONFIG_NETFILTER_FAMILY_ARP=y
 CONFIG_NETFILTER_NETLINK_ACCT=m
@@ -36,6 +40,8 @@ CONFIG_NETFILTER_SYNPROXY=m
 CONFIG_NF_TABLES=m
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NFT_NUMGEN=m
 CONFIG_NFT_CT=m
 CONFIG_NFT_FLOW_OFFLOAD=m
@@ -67,8 +73,11 @@ CONFIG_NFT_FWD_NETDEV=m
 # CONFIG_NFT_REJECT_NETDEV is not set
 CONFIG_NF_FLOW_TABLE_INET=m
 CONFIG_NF_FLOW_TABLE=m
+CONFIG_NETFILTER_XTABLES=m
+CONFIG_NETFILTER_XTABLES_COMPAT=y
 CONFIG_NETFILTER_XT_MARK=m
 CONFIG_NETFILTER_XT_CONNMARK=m
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
 CONFIG_NETFILTER_XT_SET=m
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=m
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
@@ -195,6 +204,7 @@ CONFIG_IP_VS_MH_TAB_INDEX=12
 #
 # IPVS application helper
 #
+CONFIG_SECURITY=y
 CONFIG_IP_VS_FTP=m
 CONFIG_IP_VS_NFCT=y
 CONFIG_IP_VS_PE_SIP=m
@@ -205,6 +215,8 @@ CONFIG_NFT_REJECT_IPV4=m
 CONFIG_NFT_DUP_IPV4=m
 CONFIG_NFT_FIB_IPV4=m
 CONFIG_NF_TABLES_ARP=y
+CONFIG_IP_NF_MANGLE=m
+CONFIG_NF_TABLES_BRIDGE=m
 # CONFIG_NF_FLOW_TABLE_IPV4 is not set
 CONFIG_NF_DUP_IPV4=m
 CONFIG_NF_LOG_ARP=m
@@ -233,7 +245,10 @@ CONFIG_NFT_DUP_IPV6=m
 CONFIG_NFT_FIB_IPV6=m
 CONFIG_NF_FLOW_TABLE_IPV6=m
 CONFIG_NF_DUP_IPV6=m
+CONFIG_IP6_NF_FILTER=m
+CONFIG_IP6_NF_NAT=m
 CONFIG_IP6_NF_IPTABLES=m
+CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_MATCH_AH=m
 CONFIG_IP6_NF_MATCH_EUI64=m
 CONFIG_IP6_NF_MATCH_FRAG=m
@@ -250,6 +265,7 @@ CONFIG_IP6_NF_RAW=m
 CONFIG_IP6_NF_SECURITY=m
 CONFIG_IP6_NF_TARGET_NPT=m
 CONFIG_NFT_BRIDGE_REJECT=m
+CONFIG_BRIDGE_NF_EBTABLES=m
 CONFIG_BRIDGE_EBT_BROUTE=m
 CONFIG_BRIDGE_EBT_T_FILTER=m
 CONFIG_BRIDGE_EBT_T_NAT=m
@@ -277,3 +293,8 @@ CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=m
 CONFIG_TEXTSEARCH_BM=m
 CONFIG_TEXTSEARCH_FSM=m
+
+#
+# POSIX message queue
+#
+CONFIG_POSIX_MQUEUE=y
