--- a/kas/machine/phytec/phytec.yaml
+++ b/kas/machine/phytec/phytec.yaml
@@ -7,7 +7,7 @@ repos:
   ext/meta-phytec:
     url: "https://github.com/phytec/meta-phytec"
     branch: "scarthgap"
-    commit: "f49ae476339dda6924c48d587275364d1ac23f11"
+    commit: "8b5bb03bf020ac0955664ae8ea86ac0e66a02452"
     patches:
       p001:
         repo: "meta-omnect"
@@ -15,7 +15,7 @@ repos:
   ext/meta-freescale:
     url: "https://github.com/Freescale/meta-freescale.git"
     branch: "scarthgap"
-    commit: "14e6dfccd074dc47c2a6776cbfb2070e46d3072b"
+    commit: "f21ec21e0b3516ef3b4678dc9d977c5362b7b1ff"
     patches:
       p001:
         repo: "meta-omnect"
@@ -23,14 +23,16 @@ repos:
   ext/meta-imx:
     url: "https://github.com/nxp-imx/meta-imx.git"
     branch: "scarthgap-6.6.23-2.0.0"
-    commit: "ae04eecd48e557437ec90366795b8cf202d0ce14"
+    # branch: "scarthgap-6.6.36-2.1.0"
+    commit: "f08206cdb6a47f5f52ec84e6286bcc5d8fd53cec"
+    # commit: "f9015bf087517f397d8266e012b55a441620ad73"
     layers:
       meta-imx-bsp:
       meta-imx-sdk:
   ext/meta-arm:
     url: "https://git.yoctoproject.org/meta-arm"
     branch: "scarthgap"
-    commit: "38bce82e42ea093333a53c4a10e51d1b26cbc989"
+    commit: "1947c000299c0330e8a866996505221a14c0e1ea"
     layers:
       meta-arm:
       meta-arm-toolchain:
