feat(kernel): added CONFIG_EXT4_FS_SECURIY config fragment to alway enable option
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -10,6 +10,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://cpu_freq_default_gov_schedutil.cfg \
     file://enable-overlayfs.cfg \
     file://enable-cifs.cfg \
+    file://enable-ext4-fs-security.cfg \
     file://disable-kvm.cfg \
     file://docker.cfg \
     file://lxc.cfg \
