refactor(bootloader): bootloader_versioning.bbclass now explicitly uses `OMNECT_BOOTLOADER_RECIPE_PATH` to prevent collisions when computing `OMNECT_BOOTLOADER_CHECKSUM`
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -68,7 +68,7 @@ MACHINE_EXTRA_RRECOMMENDS:remove = "linux-firmware"
 SYSTEMD_RuntimeWatchdogSec  = "60"
 SYSTEMD_RebootWatchdogSec   = "60"
 
-OMNECT_BOOTLOADER="grub-efi"
+OMNECT_BOOTLOADER_RECIPE_PATH = "${LAYERDIR_core}/recipes-bsp/grub/grub-efi_2.06.bb"
 # force bootloader version checksum to be old, when sure it's 100% binary compatible
 # OMNECT_BOOTLOADER_CHECKSUM_COMPATIBLE:pn-grub-efi = "<newchecksum> <oldchecksum>"
 # e.g.:
