feat(omnect-os-init): first integration
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -46,6 +46,8 @@ IMAGE_BOOT_FILES:remove = "uImage Image"
 # instead of kernel we want the initramfs bundled kernel
 IMAGE_INSTALL:remove = "kernel"
 
+# partition table type: gpt vs msdos
+OMNECT_PART_TYPE ?= "gpt"
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, OMNECT_PART_SIZE_DATA is the initial value.
