--- a/recipes-bsp/u-boot/u-boot/omnect_env.env
+++ b/recipes-bsp/u-boot/u-boot/omnect_env.env
@@ -16,13 +16,14 @@ distro_bootcmd=for target in ${boot_targets}; do run bootcmd_${target}; done
 omnect_update_flow=\
 printenv; \
 env exists omnect_os_bootpart || echo "initializing omnect_os_bootpart=2" && setenv omnect_os_bootpart 2 && saveenv; \
-if test "${omnect_bootloader_updated}" = "1"; then echo "bootloader updated.";saveenv;fi; \
+if test "${omnect_bootloader_updated}" = "1"; then echo "bootloader updated.";fi; \
 if test -n ${omnect_validate_update}; then \
             echo "Update validation failed - booting from partition ${omnect_os_bootpart}"; \
             setenv omnect_validate_update_part; \
             setenv omnect_validate_update; \
             setenv omnect_validate_update_failed 1; \
             saveenv; \
+            printenv; \
             run distro_bootcmd; \
         else  \
             if test -n ${omnect_validate_update_part}; then \
@@ -30,6 +31,7 @@ if test -n ${omnect_validate_update}; then \
                 setenv omnect_validate_update 1; \
                 saveenv; \
                 setenv omnect_os_bootpart ${omnect_validate_update_part}; \
+                printenv; \
                 run distro_bootcmd; \
             else \
                 echo "Normal boot - booting from partition ${omnect_os_bootpart}"; \
