WIP: compression deps
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -112,12 +112,17 @@ PACKAGECONFIG:pn-bluez5 ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 's
 
 # restrict boost dependencies
 PACKAGECONFIG:pn-boost ?= ""
+DEPENDS:remove:pn-boot = "bzip2"
+BJAM_OPTS:append:class-target = ' -sNO_BZIP2=1'
 
 # restrict docker-moby dependencies
 PACKAGECONFIG:pn-docker-moby ?= "seccomp"
 
 # restrict jq dependencies
 PACKAGECONFIG:pn-jq = ""
+
+# restrict libarchive dependencies
+PACKAGECONFIG:pn-libarchive ?= "zlib xz ${@bb.utils.filter('DISTRO_FEATURES', 'acl xattr', d)}"
 
 # restrict opkg-utils dependency (can't use ?=)
 PACKAGECONFIG:pn-opkg-utils = "update-alternatives"
