--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -112,7 +112,7 @@ PACKAGECONFIG:pn-bluez5 ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 's
 
 # restrict boost dependencies
 PACKAGECONFIG:pn-boost ?= ""
-DEPENDS:remove:pn-boot = "bzip2"
+DEPENDS:remove:pn-boost = "bzip2"
 BJAM_OPTS:append:class-target = ' -sNO_BZIP2=1'
 
 # restrict docker-moby dependencies
