--- a/dynamic-layers/phytec/recipes-bsp/u-boot/u-boot/phycore_imx8mm.env
+++ b/dynamic-layers/phytec/recipes-bsp/u-boot/u-boot/phycore_imx8mm.env
@@ -2,7 +2,8 @@ console=ttymxc2,115200
 fdt_addr=0x48000000
 kernel_addr_r=0x80280000
 ramdisk_addr_r=0x49200000
-script_addr_r=0x49100000
+scriptaddr=0x49100000
 
 #include <env/omnect_env.env>
-distro_bootcmd=mmc dev ${mmcdev};if mmc rescan; then setenv devnum ${mmcdev}; devtype=mmc; run scan_dev_for_boot_part;fi
+boot_scripts=fdt-load.scr boot.scr
+distro_bootcmd=mmc dev ${mmcdev};if mmc rescan; then setenv devnum ${mmcdev}; devtype=mmc; run scan_dev_for_scripts;fi
