fix imx8mm pxe boot
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/dynamic-layers/phytec/recipes-bsp/u-boot/u-boot/phycore_imx8mm.env
+++ b/dynamic-layers/phytec/recipes-bsp/u-boot/u-boot/phycore_imx8mm.env
@@ -1,6 +1,7 @@
 console=ttymxc2,115200
 fdt_addr=0x48000000
 kernel_addr_r=0x80280000
+pxefile_addr_r=0x4f800000
 ramdisk_addr_r=0x49200000
 scriptaddr=0x49100000
 
