--- a/conf/distro/include/omnect-os-preferred.conf
+++ b/conf/distro/include/omnect-os-preferred.conf
@@ -1,3 +1,4 @@
 PREFERRED_PROVIDER_u-boot-default-script ?= "u-boot-scr"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "libubootenv"
+PREFERRED_PROVIDER_util-linux-sfdisk-native ?= "util-linux-native"
 PREFERRED_PROVIDER_virtual/docker = "docker-moby"
