feat(healthcheck): add ramoops/pstore kernel configuration depending on new machine feature ramoos
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -16,6 +16,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://lxc.cfg \
     file://netfilter.cfg \
     file://wireguard.cfg \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'ramoops', 'file://ramoops.cfg', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
