--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -109,8 +109,7 @@ SYSTEMD_SERVICE:remove:pn-busybox-syslog = "file://busybox-syslog.service"
 
 # restrict bluez5 dependencies
 # bluez 5.72 doesn't link without "a2dp-profiles avrcp-profiles"
-PACKAGECONFIG:pn-bluez5 ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', 'systemd udev a2dp-profiles avrcp-profiles', 'systemd udev a2dp-profiles avrcp-profiles deprecated readline tools', d)}"
-
+PACKAGECONFIG:pn-bluez5 ?= "systemd udev a2dp-profiles avrcp-profiles ${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '', 'deprecated readline tools', d)}"
 # restrict boost dependencies
 PACKAGECONFIG:pn-boost ?= ""
 DEPENDS:remove:pn-boost = "bzip2"
