--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -1,5 +1,5 @@
 # - we enable overlayfs for all kernels (dependency of our partition layout)
-# - we disable kvm (e.g. set by linux-imx)
+# - we disable kvm (e.g. set by linux-phytec-imx)
 OMNECT_KERNEL_SRC_URI_LTE = " \
     file://mbim.cfg \
     file://qualcomm.cfg \
@@ -12,19 +12,26 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-cifs.cfg \
     file://enable-ext4-fs-security.cfg \
     file://disable-kvm.cfg \
-    file://docker.cfg \
-    file://lxc.cfg \
     file://netfilter.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
 
+OMNECT_KERNEL_FEATURES = " \
+    cfg/docker.cfg \
+    cfg/lxc.cfg \
+"
+
 # enforce identical kernel config independent of meta-virtualization
 BBMASK:append = " meta-virtualization/recipes-kernel/linux/linux-%.bbappend"
-FILESEXTRAPATHS:prepend:pn-linux-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
+FILESEXTRAPATHS:prepend:pn-linux-phytec-imx := "${LAYERDIR_omnect}/recipes-kernel/linux/files:"
 FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
-SRC_URI:append:pn-linux-imx = " ${OMNECT_KERNEL_SRC_URI}"
+
+KERNEL_FEATURES:append:pn-linux-phytec-imx = " ${OMNECT_KERNEL_FEATURES}"
+KERNEL_FEATURES:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_FEATURES}"
+KERNEL_FEATURES:append:pn-linux-yocto = " ${OMNECT_KERNEL_FEATURES}"
+SRC_URI:append:pn-linux-phytec-imx = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-yocto = " ${OMNECT_KERNEL_SRC_URI}"
