--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -9,33 +9,36 @@ repos:
   meta-omnect:
   ext/meta-openembedded:
     url: "https://github.com/openembedded/meta-openembedded.git"
-    branch: "kirkstone"
-    commit: "4ad41baed6236d499804cbfc4f174042d84fce97"
+    branch: "scarthgap"
+    commit: "b8d1a14f7f3b76457c36752202ea7ae5881b6654"
     layers:
+      # meta-multimedia is used by qemu_8.2.2.imx.bb (tauri) ToDo: possible to handle that in the machine specific kas file?
+      meta-multimedia:
       meta-filesystems:
       meta-networking:
       meta-oe:
       meta-python:
+
     patches:
       p001:
         repo: "meta-omnect"
-        path: "kas/patches/meta-openembedded_nspr_do_not_install_perl_to_image.patch"
+        path: "kas/patches/meta-openembedded.patch"
   # we need meta-tpm independend of feature/tpm.yaml to be able
   # to build iot-identity-service
   ext/meta-security:
     url: "https://git.yoctoproject.org/meta-security"
-    branch: "kirkstone"
-    commit: "b9cf9cd639bc8d1b4828eb0bd012b71486d35176"
+    branch: "scarthgap"
+    commit: "bc865c5276c2ab4031229916e8d7c20148dfbac3"
     layers:
       meta-tpm:
   ext/meta-swupdate:
     url: "https://github.com/sbabic/meta-swupdate.git"
-    branch: "kirkstone"
-    commit: "6918be849ddf1fed5b7a0173e51c7a136e8d4101"
+    branch: "scarthgap"
+    commit: "4a65b1ed36c0b6ee4942d5f23c4984552b17cfe6"
   ext/meta-virtualization:
     url: "https://git.yoctoproject.org/meta-virtualization"
-    branch: "kirkstone"
-    commit: "c996df33763f292da5e7513c574272d7de23eafc"
+    branch: "scarthgap"
+    commit: "450941a1b6df96285691e8c23d4f332d3c88a994"
     patches:
       p001:
         repo: "meta-omnect"
@@ -84,6 +87,9 @@ env:
 
   # (plain) password of omnect user
   OMNECT_USER_PASSWORD: ""
+
+  # enable to set LICENSE_FLAGS_ACCEPTED via env
+  LICENSE_FLAGS_ACCEPTED:
 
 local_conf_header:
   meta-omnect_distro_omnect-os: |
