--- a/kas/machine/phytec/phytec.yaml
+++ b/kas/machine/phytec/phytec.yaml
@@ -6,35 +6,37 @@ header:
 repos:
   ext/meta-phytec:
     url: "https://github.com/phytec/meta-phytec"
-    branch: "kirkstone"
-    commit: "8ec6082d4652024d4b74bcb4e2f6c39075a71f12"
+    branch: "scarthgap"
+    commit: "c9dd15e3fd4198d3eb1ffee4029588cd14cdf83f"
     patches:
       p001:
         repo: "meta-omnect"
         path: "kas/patches/meta-phytec_layerdir.patch"
   ext/meta-freescale:
     url: "https://github.com/Freescale/meta-freescale.git"
-    branch: "kirkstone"
-    commit: "c525e0c19bdc46d45f71873b5f286f49abb69418"
+    branch: "scarthgap"
+    commit: "a839e9ebe75e2bfd53024e5132414481c0a72bf7"
     patches:
       p001:
         repo: "meta-omnect"
         path: "kas/patches/meta-freescale_layerdir.patch"
-  ext/meta-freescale-distro:
-    url: "https://github.com/Freescale/meta-freescale-distro.git"
-    branch: "kirkstone"
-    commit: "d5bbb487b2816dfc74984a78b67f7361ce404253"
   ext/meta-imx:
     url: "https://github.com/nxp-imx/meta-imx.git"
-    branch: "kirkstone-5.15.71-2.2.2"
-    commit: "ca68ab5d25322b51f54564275c84ab8de3c74ea6"
+    branch: "scarthgap-6.6.52-2.2.0"
+    commit: "219f6d04a4c339eb6f2dc626f944bbdf9a716ff5"
     layers:
-      meta-bsp:
-      meta-sdk:
+      meta-imx-bsp:
+      meta-imx-sdk:
     patches:
       p001:
         repo: "meta-omnect"
-        path: "kas/patches/meta-imx_meta-bsp_layerdir.patch"
-
+        path: "kas/patches/meta-imx_layerdir.patch"
+  ext/meta-arm:
+    url: "https://git.yoctoproject.org/meta-arm"
+    branch: "scarthgap"
+    commit: "a8fe9d22eaefc294f91096c6a32663e2f4ab3b10"
+    layers:
+      meta-arm:
+      meta-arm-toolchain:
 env:
   ACCEPT_FSL_EULA: "0"
