fix(flash-mode-3 tauril): compile RTV_RV3028 into kernel (fixes flash-mode-3 for tauril)
note: tauril kirkstone has SNVS_RTC compiled into kernel,
which is active in initramfs, this is not contained in scarthgap dts.

Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -26,6 +26,8 @@ IMAGE_BOOT_FILES:remove:pn-omnect-os-image = " \
 # u-boot boot.scr config
 KERNEL_DEVICETREE_FN = "imx8mm-phygate-tauri-l.dtb"
 
+OMNECT_KERNEL_SRC_URI:append = " file://rtc_rv3028.cfg"
+
 # no differentiation for now between release an devel images concerning rootfs
 # size
 OMNECT_PART_SIZE_ROOTFS ?= "${@bb.utils.contains('OMNECT_RELEASE_IMAGE', '1', '760832', '760832', d)}"
