feat(reboot-reason): added for genericx86-64
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/recipes-kernel/linux/files/ramoops.cfg
+++ b/recipes-kernel/linux/files/ramoops.cfg
@@ -9,3 +9,10 @@ CONFIG_FUNCTION_TRACER=y
 CONFIG_PSTORE_FTRACE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
+
+# Enable UEFI pstore backend
+CONFIG_EFI_VARS_PSTORE=y
+CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE=y
+
+CONFIG_ACPI=y
+CONFIG_ACPI_APEI=y
