refactor(reboot-reason): feature ramoops renamed to more generic pstore
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -51,7 +51,7 @@ MACHINE_FEATURES = " \
     keyboard \
     pcbios \
     pci \
-    ramoops \
+    pstore \
     screen \
     serial \
     tpm2 \
