fix(genericx86-64): use correct pstore backend in APPEND
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -12,7 +12,7 @@ OMNECT_KERNEL_SRC_URI:append = " \
     file://wifi_ath10k_pci.cfg \
 "
 # default kernel parameter
-APPEND = "console=tty0 pstore.backend=erst printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
+APPEND = "console=tty0 pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
 # module autoload
 KERNEL_MODULE_AUTOLOAD = "mei"
 
