fix(reboot-reason): in kernel config correct setting of EFI_VARS_PSTORE_DEFAULT_DISABLE got lost, d'oh!
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/recipes-kernel/linux/files/pstore.cfg
+++ b/recipes-kernel/linux/files/pstore.cfg
@@ -12,7 +12,7 @@ CONFIG_PSTORE_PMSG=y
 
 # Enable UEFI pstore backend
 CONFIG_EFI_VARS_PSTORE=y
-CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE=y
+# CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE is not set
 
 CONFIG_ACPI=y
 CONFIG_ACPI_APEI=y
