chore: set root home as in kirkstone
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -13,6 +13,10 @@ DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', '3g', '3g', '', d)}
 DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', 'bluetooth', 'bluetooth', '', d)}"
 DISTRO_FEATURES += "${@bb.utils.contains('MACHINE_FEATURES', 'wifi', 'wifi', '', d)}"
 
+# explicitly set root home
+# it is set weak in bitbake.conf and default in init-manager-systemd.inc
+ROOT_HOME = "/home/root"
+
 #override packagroup-base settings
 RDEPENDS:packagegroup-base-3g:pn-packagegroup-base = ""
 
