feat(linux-yocto): enabled ACPI watchdog
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -1,5 +1,6 @@
 # additional kernel config
 OMNECT_KERNEL_SRC_URI:append = " \
+    file://acpi-watchdog.cfg \
     file://crc32c-intel_module.cfg \
     file://bluetooth_hcibtusb.cfg \
     file://i2c-chardev.cfg \
