--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -12,8 +12,13 @@ OMNECT_KERNEL_SRC_URI:append = " \
     file://tcg_tpm_2.0.cfg \
     file://wifi_ath10k_pci.cfg \
 "
+
+# below are the extra kernel command line args once pstore gets used for
+# genericx86-64. i.e. when 'pstore' becomes part of MACHINE_FEATURES below
+APPEND_PSTORE = "pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
 # default kernel parameter
-APPEND = "console=tty0 pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
+APPEND = "console=tty0"
+
 # module autoload
 KERNEL_MODULE_AUTOLOAD = "mei"
 
@@ -52,7 +57,6 @@ MACHINE_FEATURES = " \
     keyboard \
     pcbios \
     pci \
-    pstore \
     screen \
     serial \
     tpm2 \
