refactor: incorporated changes from review
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -13,11 +13,11 @@ OMNECT_KERNEL_SRC_URI:append = " \
     file://wifi_ath10k_pci.cfg \
 "
 
-# below are the extra kernel command line args once pstore gets used for
-# genericx86-64. i.e. when 'pstore' becomes part of MACHINE_FEATURES below
-APPEND_PSTORE = "pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
 # default kernel parameter
 APPEND = "console=tty0"
+
+# below are the extra kernel command line args for reboot reason support
+APPEND:append:omnect_pstore = " pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
 
 # module autoload
 KERNEL_MODULE_AUTOLOAD = "mei"
@@ -64,6 +64,8 @@ MACHINE_FEATURES = " \
     wifi \
     x86 \
 "
+# enable override below once arrakis device is capable of supporting it
+# MACHINEOVERRIDES:prepend = "omnect_pstore:"
 MACHINEOVERRIDES:prepend = "omnect_grub:"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915 linux-firmware-ath10k linux-firmware-qca"
 # don't install every available firmware
