refactor(genericx86-64): improved comments about pstore feature in machine config
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -64,7 +64,8 @@ MACHINE_FEATURES = " \
     wifi \
     x86 \
 "
-# enable override below once arrakis device is capable of supporting it
+# once arrakis device is capable of supporting it, add pstore to
+# MACHINE_FEATURES above and enable override below
 # MACHINEOVERRIDES:prepend = "omnect_pstore:"
 MACHINEOVERRIDES:prepend = "omnect_grub:"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915 linux-firmware-ath10k linux-firmware-qca"
