feat: added support for reboot reasons (#561)
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/machine/genericx86-64.extra.conf
+++ b/conf/machine/genericx86-64.extra.conf
@@ -12,8 +12,13 @@ OMNECT_KERNEL_SRC_URI:append = " \
     file://tcg_tpm_2.0.cfg \
     file://wifi_ath10k_pci.cfg \
 "
+
 # default kernel parameter
 APPEND = "console=tty0"
+
+# below are the extra kernel command line args for reboot reason support
+APPEND:append:omnect_pstore = " pstore.backend=efi printk.always_kmsg_dump=Y crash_kexec_post_notifiers=Y"
+
 # module autoload
 KERNEL_MODULE_AUTOLOAD = "mei"
 
@@ -59,6 +64,9 @@ MACHINE_FEATURES = " \
     wifi \
     x86 \
 "
+# once arrakis device is capable of supporting it, add pstore to
+# MACHINE_FEATURES above and enable override below
+# MACHINEOVERRIDES:prepend = "omnect_pstore:"
 MACHINEOVERRIDES:prepend = "omnect_grub:"
 MACHINE_EXTRA_RRECOMMENDS += "linux-firmware-i915 linux-firmware-ath10k linux-firmware-qca"
 # don't install every available firmware
