--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -1,4 +1,5 @@
 require conf/machine/include/rpi.inc
+require conf/machine/include/rpi-pstore.inc
 
 # adu compatibility id
 OMNECT_ADU_DEVICEPROPERTIES_COMPATIBILITY_ID = "4"
