fix(optee-client): meta-arm needed adaption so that optee-client can be built
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/kas/machine/phytec/phytec.yaml
+++ b/kas/machine/phytec/phytec.yaml
@@ -38,5 +38,9 @@ repos:
     layers:
       meta-arm:
       meta-arm-toolchain:
+    patches:
+      p001:
+        repo: "meta-omnect"
+        path: "kas/patches/meta-arm_layerdir.patch"
 env:
   ACCEPT_FSL_EULA: "0"
