--- a/recipes-kernel/linux/files/netfilter.cfg
+++ b/recipes-kernel/linux/files/netfilter.cfg
@@ -12,6 +12,7 @@ CONFIG_NETFILTER_NETLINK_QUEUE=m
 CONFIG_NETFILTER_NETLINK_LOG=m
 CONFIG_NETFILTER_NETLINK_OSF=m
 CONFIG_NETFILTER_CONNCOUNT=m
+CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_ZONES=y
 CONFIG_NF_CONNTRACK_TIMESTAMP=y
