--- a/kas/machine/x86_64/genericx86-64.yaml
+++ b/kas/machine/x86_64/genericx86-64.yaml
@@ -10,5 +10,19 @@ repos:
     commit: "7633f51d53f535728fe035fa866416d2e5ba6a9c"
     layers:
       meta-yocto-bsp:
+  ext/meta-secure-core:
+    url: "https://github.com/Wind-River/meta-secure-core.git"
+    branch: "scarthgap"
+    commit: "7a51f091cccfb8f629ce962f13b7b45d23005093"
+    layers:
+      meta-efi-secure-boot:
+      meta-secure-core-common:
+      meta-signing-key:
+  ext/meta-perl:
+    url: "https://github.com/openembedded/meta-openembedded.git"
+    branch: "scarthgap"
+    commit: "67ad83dd7c2485dae0c90eac345007af6195b84d"
+    layers:
+      meta-perl:
 
 machine: "genericx86-64"
