--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -13,6 +13,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-ext4-fs-security.cfg \
     file://disable-kvm.cfg \
     file://netfilter.cfg \
+    file://virtualization.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', 'pstore', 'file://pstore.cfg', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
