fix(kernel): fixed typo netfilter.cfg
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/recipes-kernel/linux/files/netfilter.cfg
+++ b/recipes-kernel/linux/files/netfilter.cfg
@@ -292,7 +292,7 @@ CONFIG_BRIDGE_EBT_NFLOG=m
 # CONFIG_NET_ACT_CONNMARK is not set
 # CONFIG_NET_ACT_CTINFO is not set
 # CONFIG_NET_ACT_CT is not set
-ONFIG_NET_CLS=y
+CONFIG_NET_CLS=y
 CONFIG_NET_CLS_CGROUP=m
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
