fix(NetworkManager): interface names accepted as WWAN interfaces to be managed were too strictly defined
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/recipes-connectivity/networkmanager/files/NetworkManager.conf
+++ b/recipes-connectivity/networkmanager/files/NetworkManager.conf
@@ -13,4 +13,5 @@ hostname-mode=none
 autoconnect-retries-default=0
 
 [keyfile]
-unmanaged-devices=except:interface-name:wwan*,except:interface-name:cdc-wdm*
+# we assume that WWAN interface names start with ww or cdc-wdm
+unmanaged-devices=except:interface-name:ww*,except:interface-name:cdc-wdm*
