--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -145,6 +145,12 @@ PACKAGECONFIG:append:pn-polkit = " duktape"
 CODEGEN_PYTHON_RDEPENDS:pn-glib-2.0 = ""
 RDEPENDS:${PN}:pn-gobject-introspection = ""
 
+# disable glib-2.0 dependency to shared-mime-info
+SHAREDMIMEDEP:pn-glib-2.0 = ""
+
+# rm not used dependencies from docker:
+DEPENDS:remove:pn-docker-moby = "sqlite btrfs-tools"
+
 # define default devel tools to be included in image
 OMNECT_DEVEL_TOOLS = "\
     curl \
