--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -20,9 +20,10 @@ OMNECT_KERNEL_SRC_URI = " \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
 "
 
-OMNECT_KERNEL_FEATURES = " \
-    cfg/docker.cfg \
-    cfg/lxc.cfg \
+KERNEL_FEATURES:append = " \
+    cfg/docker.scc \
+    cfg/lxc.scc \
+    cfg/kubernetes.scc \
 "
 
 # enforce identical kernel config independent of meta-virtualization
@@ -31,9 +32,6 @@ FILESEXTRAPATHS:prepend:pn-linux-phytec-imx := "${LAYERDIR_omnect}/recipes-kerne
 FILESEXTRAPATHS:prepend:pn-linux-raspberrypi := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 FILESEXTRAPATHS:prepend:pn-linux-yocto := "${LAYERDIR_omnect}/recipes-kernel/linux/files:${LAYERDIR_virtualization-layer}/recipes-kernel/linux/linux-yocto:"
 
-KERNEL_FEATURES:append:pn-linux-phytec-imx = " ${OMNECT_KERNEL_FEATURES}"
-KERNEL_FEATURES:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_FEATURES}"
-KERNEL_FEATURES:append:pn-linux-yocto = " ${OMNECT_KERNEL_FEATURES}"
 SRC_URI:append:pn-linux-phytec-imx = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-raspberrypi = " ${OMNECT_KERNEL_SRC_URI}"
 SRC_URI:append:pn-linux-yocto = " ${OMNECT_KERNEL_SRC_URI}"
