feat(kernel): added USB serial drivers for Prolific (PL2303) and QinHeng (CH341) to tauri
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -18,6 +18,7 @@ OMNECT_KERNEL_SRC_URI = " \
     ${@bb.utils.contains('MACHINE_FEATURES', 'pstore', 'file://pstore.cfg', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
+    ${@bb.utils.contains('MACHINE_FEATURES', 'extra-usb-serial-devices', 'file://usb-serial-devices.cfg', '', d)} \
 "
 
 KERNEL_FEATURES:append = " \
