--- a/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
+++ b/conf/machine/phygate-tauri-l-imx8mm-2.extra.conf
@@ -12,6 +12,8 @@ MACHINE_FEATURES:remove = " \
     wifi \
 "
 
+MACHINE_FEATURES:append = " extra-usb-serial-devices "
+
 # u-boot boot.scr config
 KERNEL_DEVICETREE_FN = "imx8mm-phygate-tauri-l.dtb"
 
