refactor(kernel): make USB serial devices generally available
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -13,12 +13,12 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-ext4-fs-security.cfg \
     file://disable-kvm.cfg \
     file://netfilter.cfg \
+    file://usb-serial-devices.cfg \
     file://virtualization.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', 'pstore', 'file://pstore.cfg', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', '3g', '${OMNECT_KERNEL_SRC_URI_LTE}', '', d)} \
     ${@bb.utils.contains('MACHINE_FEATURES', 'can', 'file://vcan_vxcan.cfg', '', d)} \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'extra-usb-serial-devices', 'file://usb-serial-devices.cfg', '', d)} \
 "
 
 KERNEL_FEATURES:append = " \
